sort.dutchflag.DutchFlagAlgo.scala.error
Compilation error:
DutchFlagAlgo:7: error: '(' expected but '}' found.
      }
      ^