sort.dutchflag.DutchFlagAlgo.scala.code
def solve() {
  while (!estTrie()) {
    for (i<-0 to getTaille()) {
      if (getCouleur(i)==BLEU) {
        for 
      }
    }
  }
}